[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qabpassgen"
version = "0.0.4"
authors = [
  { name="Adil Dyer", email="addressal.adil@gmail.com" },
]
description = "Qiskit Aer based Random password generator"
readme = "README.md"
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit",
    "qiskit-aer",
    "zxcvbn"
]

[project.urls]
"Homepage" = "https://github.com/AdilDyer/qabpassgen"
